# grocery-medallion-au

./: .gitignore  .pre-commit-config.yaml  PHASE3_PROGRESS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: data-quality.md  medallion-design.md
fabric/bi/rpt_dim_product_overview.Report/: .platform  definition.pbir  report.json
fabric/bi/rpt_dim_product_overview.Report/StaticResources/SharedResources/BaseThemes/: CY26SU05.json
fabric/engineering/bronze__01_ingest_dim_product.Notebook/: .platform  notebook-content.py
fabric/engineering/gold__03_derive_dim_product.Notebook/: .platform  notebook-content.py
fabric/engineering/pl_dim_product.DataPipeline/: .platform  pipeline-content.json
fabric/engineering/silver__02_clean_dim_product.Notebook/: .platform  notebook-content.py
fabric/semantic/sm_grocery_core.SemanticModel/: .platform
fabric/semantic/sm_grocery_core.SemanticModel/definition/: expressions.tmdl  model.tmdl
fabric/semantic/sm_grocery_core.SemanticModel/definition/tables/: dim_product.tmdl
fabric/storage/lh_bronze.Lakehouse/: .platform
fabric/storage/lh_gold.Lakehouse/: .platform
fabric/storage/lh_silver.Lakehouse/: .platform
