[project]
name = "grocery-medallion-au"
version = "0.1.0"
description = "Portfolio project: AU grocery medallion architecture in Fabric"
requires-python = ">=3.11,<3.12"

[tool.uv.workspace]
members = ["packages/grocery-gen", "packages/grocery-mcp", "packages/grocery-forecast"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008"]  # E501 handled by formatter; B008 is the standard Typer pattern

[tool.ruff.lint.isort]
known-first-party = ["grocery_gen"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
addopts = "-ra --strict-markers"
